Uploaded image for project: 'MariaDB Server'
  1. MariaDB Server
  2. MDEV-22711

Assertion `nr != 0' failed in handler::update_auto_increment

    XMLWordPrintable

Details

    Description

      USE test;
      SET SQL_MODE='';
      SET SESSION insert_id=0;
      CREATE TABLE t (a INT AUTO_INCREMENT KEY) PARTITION BY HASH (a) PARTITIONS 3;
      INSERT INTO t VALUES ('');
      

      Leads to:

      10.5.4 8569dac1ec9f6853a0b2f3ea9bcbda67644ead24

      mysqld: /test/10.5_dbg/sql/handler.cc:3574: int handler::update_auto_increment(): Assertion `nr != 0' failed.
      

      10.5.4 8569dac1ec9f6853a0b2f3ea9bcbda67644ead24

      Core was generated by `/test/MD260520-mariadb-10.5.4-linux-x86_64-dbg/bin/mysqld --no-defaults --core-'.
      Program terminated with signal SIGABRT, Aborted.
      #0  __pthread_kill (threadid=<optimized out>, signo=signo@entry=6)
          at ../sysdeps/unix/sysv/linux/pthread_kill.c:57
      [Current thread is 1 (Thread 0x14b44ee82700 (LWP 1168779))]
      (gdb) bt
      #0  __pthread_kill (threadid=<optimized out>, signo=signo@entry=6) at ../sysdeps/unix/sysv/linux/pthread_kill.c:57
      #1  0x0000558649c61d7a in my_write_core (sig=sig@entry=6) at /test/10.5_dbg/mysys/stacktrace.c:518
      #2  0x0000558649407385 in handle_fatal_signal (sig=6) at /test/10.5_dbg/sql/signal_handler.cc:330
      #3  <signal handler called>
      #4  __GI_raise (sig=sig@entry=6) at ../sysdeps/unix/sysv/linux/raise.c:51
      #5  0x000014b44d5c6801 in __GI_abort () at abort.c:79
      #6  0x000014b44d5b639a in __assert_fail_base (fmt=0x14b44d73d7d8 "%s%s%s:%u: %s%sAssertion `%s' failed.\n%n", assertion=assertion@entry=0x558649f72840 "nr != 0", file=file@entry=0x558649f72162 "/test/10.5_dbg/sql/handler.cc", line=line@entry=3574, function=function@entry=0x558649f76460 <handler::update_auto_increment()::__PRETTY_FUNCTION__> "int handler::update_auto_increment()") at assert.c:92
      #7  0x000014b44d5b6412 in __GI___assert_fail (assertion=assertion@entry=0x558649f72840 "nr != 0", file=file@entry=0x558649f72162 "/test/10.5_dbg/sql/handler.cc", line=line@entry=3574, function=function@entry=0x558649f76460 <handler::update_auto_increment()::__PRETTY_FUNCTION__> "int handler::update_auto_increment()") at assert.c:101
      #8  0x00005586494131d2 in handler::update_auto_increment (this=this@entry=0x14b42c0380a0) at /test/10.5_dbg/sql/handler.cc:3574
      #9  0x00005586497080ea in ha_partition::write_row (this=0x14b42c0380a0, buf=0x14b42c0511c8 "\377") at /test/10.5_dbg/sql/ha_partition.cc:4378
      #10 0x000055864941b142 in handler::ha_write_row (this=0x14b42c0380a0, buf=0x14b42c0511c8 "\377") at /test/10.5_dbg/sql/handler.cc:6986
      #11 0x000055864911ca66 in write_record (thd=thd@entry=0x14b42c015088, table=table@entry=0x14b42c0fa088, info=info@entry=0x14b44ee80a60, sink=sink@entry=0x0) at /test/10.5_dbg/sql/sql_insert.cc:2091
      #12 0x0000558649127aa0 in mysql_insert (thd=thd@entry=0x14b42c015088, table_list=0x14b42c074180, fields=..., values_list=..., update_fields=..., update_values=..., duplic=DUP_ERROR, ignore=false, result=0x0) at /test/10.5_dbg/sql/sql_insert.cc:1088
      #13 0x000055864915ea46 in mysql_execute_command (thd=thd@entry=0x14b42c015088) at /test/10.5_dbg/sql/sql_parse.cc:4553
      #14 0x000055864916a02e in mysql_parse (thd=thd@entry=0x14b42c015088, rawbuf=<optimized out>, length=<optimized out>, parser_state=parser_state@entry=0x14b44ee813d0, is_com_multi=is_com_multi@entry=false, is_next_command=is_next_command@entry=false) at /test/10.5_dbg/sql/sql_parse.cc:7991
      #15 0x0000558649156b42 in dispatch_command (command=command@entry=COM_QUERY, thd=thd@entry=0x14b42c015088, packet=packet@entry=0x14b42c067089 "INSERT INTO t VALUES ('')", packet_length=packet_length@entry=25, is_com_multi=is_com_multi@entry=false, is_next_command=is_next_command@entry=false) at /test/10.5_dbg/sql/sql_parse.cc:1874
      #16 0x000055864915531c in do_command (thd=0x14b42c015088) at /test/10.5_dbg/sql/sql_parse.cc:1355
      #17 0x00005586492af73f in do_handle_one_connection (connect=<optimized out>, connect@entry=0x14b42d8453a8, put_in_cache=put_in_cache@entry=true) at /test/10.5_dbg/sql/sql_connect.cc:1411
      #18 0x00005586492afe5b in handle_one_connection (arg=arg@entry=0x14b42d8453a8) at /test/10.5_dbg/sql/sql_connect.cc:1313
      #19 0x000055864970f14e in pfs_spawn_thread (arg=0x14b44c845888) at /test/10.5_dbg/storage/perfschema/pfs.cc:2201
      #20 0x000014b44e2a96db in start_thread (arg=0x14b44ee82700) at pthread_create.c:463
      #21 0x000014b44d6a788f in clone () at ../sysdeps/unix/sysv/linux/x86_64/clone.S:95
      

      Bug confirmed present in:
      MariaDB: 10.2.33 (dbg), 10.3.24 (dbg), 10.4.14 (dbg), 10.5.4 (dbg)

      Bug confirmed not present in:
      MariaDB: 10.1.46 (dbg), 10.1.46 (opt), 10.2.33 (opt), 10.3.24 (opt), 10.4.14 (opt), 10.5.4 (opt)
      MySQL: 5.5.62 (dbg), 5.5.62 (opt), 5.6.47 (dbg), 5.6.47 (opt), 5.7.29 (dbg), 5.7.29 (opt), 8.0.19 (dbg), 8.0.19 (opt)

      Attachments

        Issue Links

          Activity

            People

              holyfoot Alexey Botchkov
              Roel Roel Van de Paar
              Votes:
              0 Vote for this issue
              Watchers:
              6 Start watching this issue

              Dates

                Created:
                Updated:
                Resolved:

                Time Tracking

                  Estimated:
                  Original Estimate - Not Specified
                  Not Specified
                  Remaining:
                  Remaining Estimate - 0d
                  0d
                  Logged:
                  Time Spent - 1d 3h 50m
                  1d 3h 50m

                  Git Integration

                    Error rendering 'com.xiplink.jira.git.jira_git_plugin:git-issue-webpanel'. Please contact your Jira administrators.