MDEV-22711 Assertion `nr != 0' failed in handler::update_auto_increment.

DBUG_ASSERT removed as the AUTO INCREMENT can actually be 0 when the
SET insert_id= 0; was done.